tests/negative/lexer_invalid_char.uzpp
// XATOLIK_KUTILMOQDA: lexer: tanilmagan operator (yagona @)
ulash "uzpp_runtime.hpp"
butun asosiy() {
    butun a = 1 @@@ 2;
    qaytarish 0;
}
